--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_lorem: ^2.0.0
+  go_router: ^12.1.1
 
 dev_dependencies:
   flutter_test:
